fix: include `--enable-native-access` in forwarded JVM args